# MDS7202_Free_Riders

./: .gitignore  Lab1_enunciado.ipynb  README.md  pyproject.toml
Lab2/: Lab2_enunciado.ipynb
Lab4/: Lab4_enunciado.ipynb
Lab6/: Lab6_enunciado.ipynb  model_dummy.pkl  model_monotone.pkl  model_xgb.pkl
Labs/Lab10/: Lab10_enunciado.ipynb
Labs/Lab11/: Lab11_enunciado.ipynb
Labs/Lab5/: Lab5_Haberle_Márquez.ipynb
Labs/Lab6/: Lab6_enunciado.ipynb
Labs/Lab7/: Lab7_enunciado.ipynb
Labs/Lab8/: .dockerignore  Lab8_enunciado.ipynb  Lab_8_Haberle_Márquez.md  docker-compose.yml  main.py  optimize.py  requirements.txt
Labs/Lab8/models/: best_xgboost.pkl  best_xgboost_pipeline.pkl
Labs/Lab9/: Lab9_enunciado.ipynb
Labs/Lab9/airflow/: Dockerfile  requirements.txt
Labs/Lab9/airflow/dags/: dag_dynamic.py  dag_lineal.py  hiring_dynamic_functions.py  hiring_functions.py
Labs/Lab9/dags/: hiring_functions.py
Proyecto/entrega1/: enunciado_entrega1.ipynb
Proyecto/entrega2/: .env.example  Dockerfile  README.md  conclusiones.md  docker-compose.yml  enunciado_entrega2.ipynb  generate_test_data.py  requirements.txt
Proyecto/entrega2/airflow/: .dockerignore  QUICKSTART.md  README.md  VIDEO_GUIDE.md  docker-compose.yml  requirements.txt
Proyecto/entrega2/airflow/dags/: DAG_OPTIMIZATIONS.md  dag.py  drift_detector.py  load_and_preprocess.py  (+5 more)
Proyecto/entrega2/app/: README.md  docker-compose.yml
Proyecto/entrega3/: .env.example  AUTOMATED_PIPELINE_GUIDE.md  QUICK_START.md  README.md  informe.ipynb
entrega1/: dataset_final.parquet  enunciado_entrega1.ipynb
(+24 files in other folders)
