[project]
name = "mds7202-free-riders"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alibi>=0.5.5",
    "apache-airflow>=3.1.0",
    "fastapi>=0.119.1",
    "gradio>=5.49.1",
    "imblearn>=0.0",
    "ipykernel>=6.30.1",
    "lightgbm>=4.6.0",
    "mlflow>=3.5.1",
    "nbformat>=5.10.4",
    "numpy>=2.3.3",
    "optuna>=4.5.0",
    "optuna-integration[xgboost]>=4.5.0",
    "pandas>=2.3.2",
    "plotly>=6.3.0",
    "prophet>=1.2.1",
    "pyarrow>=21.0.0",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "shap>=0.48.0",
    "statsmodels>=0.14.5",
    "uvicorn>=0.38.0",
    "xgboost>=3.0.5",
]
